--- a/index.html
+++ b/index.html
@@ -3,5 +3,210 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+
+    <section>
+        <div class="container-section">
+            <div class="section-heading">
+                <h3>Tło projektu</h3>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo tenetur rem nisi, nobis fugiat adipisci
+                    saepe illo,
+                    aliquam cum, quidem deserunt illum molestiae doloremque veritatis. Consectetur adipisci est sunt
+                    obcaecati!
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container-section">
+            <div class="section-heading">
+                <h3>Aktualności</h3>
+            </div>
+            <div class="news-picture">
+                <img src="./media/images/exemplaryPic.jpg" alt="">
+            </div>
+            <div class="news-description">
+                <h4>Aktualność numer jeden</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error amet deserunt aspernatur aliquam harum
+                    quas, libero animi dolore.</p>
+            </div>
+            <div class="wrapper">
+                <div class="news-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                </div>
+                <div class="news-description">
+                    <h4>Aktualność numer drugi</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, odit provident delectus
+                        sequi dolores fugiat.</p>
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="news-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                </div>
+                <div class="news-description">
+                    <h4>Aktualność numer trzeci</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dolores animi temporibus
+                        doloremque nisi, placeat natus.</p>
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="news-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                </div>
+                <div class="news-description">
+                    <h4>Aktualność numer cztery</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet quibusdam quidem
+                        aspernatur quam, sint maiores.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container-section">
+            <div class="section-heading">
+                <h3>Profil warsztatów</h3>
+            </div>
+            <div>
+                <div class="workshop-details">
+                    <p class="worshop-details-item">Cel:</p>
+                    <p class="worshop-details-item-description">promocja prawidłowych postaw żywieniowych</p>
+                    <p class="worshop-details-item">Grupa docelowa:</p>
+                    <p class="worshop-details-item-description">dzieci, młodzież, rodzice</p>
+                    <p class="worshop-details-item">Czas trwania projektu:</p>
+                    <p class="worshop-details-item-description">maj 2020 - czerwiec 2020</p>
+                    <p class="worshop-details-item">Zakres:</p>
+                    <p class="worshop-details-item-description">200 warsztatów</p>
+                    <p class="worshop-details-item">Forma:</p>
+                    <p class="worshop-details-item-description">dwugodzinne</p>
+                    <p class="worshop-details-item">Charakter:</p>
+                    <p class="worshop-details-item-description">bezpłatne</p>
+                    <p class="worshop-details-item">Prowadzący:</p>
+                    <p class="worshop-details-item-description">dr Jan Kowalski</p>
+                    <p class="worshop-details-item">Regulamin:</p>
+                    <p><a href="#" class="worshop-details-item">Kliknij Tutaj</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container-section">
+            <div class="section-heading">
+                <h3>Galeria</h3>
+            </div>
+            <div class="gallery">
+                <div class="gallery-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <a href="#" class="image-link">text first image</a>
+                </div>
+                <div class="gallery-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <a href="#" class="image-link">text second image</a>
+                </div>
+                <div class="gallery-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <a href="#" class="image-link">text third image</a>
+                </div>
+                <div class="gallery-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <a href="#" class="image-link">text fourth image</a>
+                </div>
+                <div class="gallery-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <a href="#" class="image-link">text fifth image</a>
+                </div>
+                <div class="gallery-picture">
+                    <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <a href="#" class="image-link">text sixth image</a>
+                </div>
+            </div>
+        </div>
+
+        <section>
+            <div class="container-section">
+                <div class="section-heading">
+                    <h3>Przepisy</h3>
+                </div>
+                <div class="recipies">
+                    <div class="recipe">
+                        <img src="./media/icons/1stMeal.svg" alt="">
+                        <p>ŚNIADANIA</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="./media/icons/2ndMeal.svg" alt="">
+                        <p>II ŚNIADANIE</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="./media/icons/3rdMeal.svg" alt="">
+                        <p>OBIAD</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="./media/icons/4thMeal.svg" alt="">
+                        <p>PODWIECZOREK</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="./media/icons/5rdMeal.svg" alt="">
+                        <p>KOLACJA</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container-section">
+                <div class="section-heading">
+                    <h3>Dla rodziców</h3>
+                </div>
+
+                <div>
+                    <div class="container-parent">
+                        <p><a href="#" class="worshop-details-item">Wpływ żywienia na zdrowie</a></p>
+                        <p><a href="#" class="worshop-details-item">Najistotniejsze składniki w diecie twojego
+                                dziecka</a></p>
+                        <p><a href="#" class="worshop-details-item">Jak postępować z niejadkiem</a></p>
+                    </div>
+                    <div class="container-parent">
+                        <p><a href="#" class="worshop-details-item">Wpływ żywienia na zdrowie</a></p>
+                        <p><a href="#" class="worshop-details-item">Najistotniejsze składniki w diecie twojego
+                                dziecka</a></p>
+                        <p><a href="#" class="worshop-details-item">Jak postępować z niejadkiem</a></p>
+                    </div>
+                    <div class="container-parent">
+                        <p><a href="#" class="worshop-details-item">Wpływ żywienia na zdrowie</a></p>
+                        <p><a href="#" class="worshop-details-item">Najistotniejsze składniki w diecie twojego
+                                dziecka</a></p>
+                        <p><a href="#" class="worshop-details-item">Jak postępować z niejadkiem</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container-section">
+                <div class="section-heading">
+                    <h3>Organizatorzy</h3>
+                </div>
+                <div class="container-organizers">
+                    <p>Organizatorzy</p>
+                    <img src="./media/organizers/sponsor1.svg" alt="">
+                    <p>Patroni</p>
+                    <img src="./media/organizers/sponsor2.svg" alt="">
+                    <p>Sponsorzy</p>
+                    <img src="./media/organizers/sponsor3.svg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <div class="container-footer">
+            <img src="./media/images/footer.png" alt="">
+        </div>
     
+
 </body>
