--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <head>
     <title>Zielona kraina</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
 
+    <header class="container row">
+        <div class="column-nav center">
+            <div id="links">
+                <a href='#home' class="pipe">HOME</a>
+                <a href='#news' class="pipe">AKTUALNOŚCI</a>
+                <a href='#gallery' class="pipe">GALERIA</a>
+                <a href='#recipies' class="pipe">PRZEPISY</a>
+                <a href='#parents' class="pipe">DLA RODZICÓW</a>
+                <a href='#organizers' class="pipe">ORGANIZATORZY</a>
+                <a href='#footer' class="pipe">POLECAMY</a>
+            </div>
+        </div>
+        <div class="column-small white"></div>
     </header>
 
     <section>
-        <div class="container-section">
+        <div class="container-section" id="home">
             <div class="section-heading">
                 <h3>Tło projektu</h3>
             </div>
@@ -23,7 +37,7 @@
     </section>
 
     <section>
-        <div class="container-section">
+        <div class="container-section" id="news">
             <div class="section-heading">
                 <h3>Aktualności</h3>
             </div>
@@ -69,7 +83,7 @@
     </section>
 
     <section>
-        <div class="container-section">
+        <div class="container-section" id="workshop">
             <div class="section-heading">
                 <h3>Profil warsztatów</h3>
             </div>
@@ -97,7 +111,7 @@
     </section>
 
     <section>
-        <div class="container-section">
+        <div class="container-section" id="gallery">
             <div class="section-heading">
                 <h3>Galeria</h3>
             </div>
@@ -130,7 +144,7 @@
         </div>
 
         <section>
-            <div class="container-section">
+            <div class="container-section" id="recipies">
                 <div class="section-heading">
                     <h3>Przepisy</h3>
                 </div>
@@ -160,7 +174,7 @@
         </section>
 
         <section>
-            <div class="container-section">
+            <div class="container-section" id="parents">
                 <div class="section-heading">
                     <h3>Dla rodziców</h3>
                 </div>
@@ -189,7 +203,7 @@
         </section>
 
         <section>
-            <div class="container-section">
+            <div class="container-section" id="organizers">
                 <div class="section-heading">
                     <h3>Organizatorzy</h3>
                 </div>
@@ -204,9 +218,9 @@
             </div>
         </section>
 
-        <div class="container-footer">
+        <div class="container-footer" id="footer">
             <img src="./media/images/footer.png" alt="">
         </div>
-    
+
 
 </body>
