--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
 
 <body>
     <header class="header">
+        <div class="header-test">
         <div class="container-header">
             <a href="index.html">
-                <img src="./media/images/logo.png" alt="logo" class="nav-logo">
+                <img src="./media/images/logo.png" alt="logo" class="header-logo">
             </a>
-            <a href='#home'>HOME &#8226;</a>
-            <a href='#news'>AKTUALNOŚCI &#8226;</a>
-            <a href='#gallery'>GALERIA &#8226;</a>
-            <a href='#recipies'>PRZEPISY &#8226;</a>
-            <a href='#parents'>DLA RODZICÓW &#8226;</a>
-            <a href='#organizers'>ORGANIZATORZY &#8226;</a>
-            <a href='#footer'>POLECAMY</a>
+            <div class="header-items">
+                <a href='#home' class="header-item">HOME</a>
+                <a class="header-item">&#8226;</a>
+                <a href='#news' class="header-item">AKTUALNOŚCI</a>
+                <a class="header-item">&#8226;</a>
+                <a href='#gallery' class="header-item">GALERIA</a>
+                <a class="header-item">&#8226;</a>
+                <a href='#recipies' class="header-item">PRZEPISY</a>
+                <a class="header-item">&#8226;</a>
+                <a href='#parents' class="header-item">DLA RODZICÓW</a>
+                <a class="header-item">&#8226;</a>
+                <a href='#organizers' class="header-item">ORGANIZATORZY</a>
+                <a class="header-item">&#8226;</a>
+                <a href='#footer' class="header-item">POLECAMY</a>
+            </div>
+        </div>
         </div>
     </header>
 
