--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
     <header class="header">
-        <div class="header-test">
         <div class="container-header">
             <a href="index.html">
                 <img src="./media/images/logo.png" alt="logo" class="header-logo">
@@ -30,72 +29,94 @@
                 <a href='#footer' class="header-item">POLECAMY</a>
             </div>
         </div>
-        </div>
     </header>
 
+
     <div class="container-all">
+
         <section>
-            <div class="container-section" id="home">
+            <div class="container-section" id="kids-pic">
+                <img src="./media/images/kids.jpg" alt="">
+            </div>
+        </section>
+
+        <section>
+            <div class="container-section" id="background">
                 <div class="section-heading">
                     <h3>Tło projektu</h3>
                 </div>
-                <div>
+                <div class="background-text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo tenetur rem nisi, nobis fugiat
-                        adipisci
-                        saepe illo,
-                        aliquam cum, quidem deserunt illum molestiae doloremque veritatis. Consectetur adipisci est sunt
-                        obcaecati!
+                        adipisci saepe illo, aliquam cum, quidem deserunt illum molestiae doloremque veritatis.
+                        Consectetur adipisci est sunt
+                        obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos omnis officiis nemo
+                        sapiente. Non sed molestias
+                        exercitationem earum unde error voluptatum natus reprehenderit eos? Non, fugiat ipsam. Culpa,
+                        veniam temporibus. Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Hic debitis repudiandae corporis, a non
+                        perferendis omnis aliquid exercitationem voluptas, expedita blanditiis dolores. Ipsa voluptas
+                        repellendus maxime dolore excepturi odio earum.
                     </p>
                 </div>
             </div>
         </section>
 
         <section>
-            <div class="container-section grey-section" id="news">
+            <div class="container-section news-section grey-section">
                 <div class="section-heading">
                     <h3>Aktualności</h3>
                 </div>
-                <div class="news-picture">
-                    <img src="./media/images/exemplaryPic.jpg" alt="">
-                </div>
-                <div class="news-description">
-                    <h4>Aktualność numer jeden</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error amet deserunt aspernatur aliquam
-                        harum
-                        quas, libero animi dolore.</p>
-                </div>
-                <div class="wrapper">
-                    <div class="news-picture">
-                        <img src="./media/images/exemplaryPic.jpg" alt="">
+                <div class="news">
+                    <div class="news-item">
+                        <div class="news-picture">
+                            <img src="./media/images/exemplaryPic.jpg" alt="">
+                        </div>
+                        <div class="news-description">
+                            <h4>Aktualność numer jeden</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error amet deserunt
+                                aspernatur aliquam
+                                harum
+                                quas, libero animi dolore.</p>
+                        </div>
                     </div>
-                    <div class="news-description">
-                        <h4>Aktualność numer drugi</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, odit provident delectus
-                            sequi dolores fugiat.</p>
+                    <div class="news-item">
+                        <div class="news-picture">
+                            <img src="./media/images/exemplaryPic.jpg" alt="">
+                        </div>
+                        <div class="news-description">
+                            <h4>Aktualność numer drugi</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, odit provident
+                                delectus
+                                sequi dolores fugiat.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="wrapper">
-                    <div class="news-picture">
-                        <img src="./media/images/exemplaryPic.jpg" alt="">
+                    <div class="news-item">
+                        <div class="news-picture">
+                            <img src="./media/images/exemplaryPic.jpg" alt="">
+                        </div>
+                        <div class="news-description">
+                            <h4>Aktualność numer trzeci</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dolores animi
+                                temporibus
+                                doloremque nisi, placeat natus.</p>
+                        </div>
                     </div>
-                    <div class="news-description">
-                        <h4>Aktualność numer trzeci</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dolores animi temporibus
-                            doloremque nisi, placeat natus.</p>
-                    </div>
-                </div>
-                <div class="wrapper">
-                    <div class="news-picture">
-                        <img src="./media/images/exemplaryPic.jpg" alt="">
-                    </div>
-                    <div class="news-description">
-                        <h4>Aktualność numer cztery</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet quibusdam quidem
-                            aspernatur quam, sint maiores.</p>
+                    <div class="news-item">
+                        <div class="news-picture">
+                            <img src="./media/images/exemplaryPic.jpg" alt="">
+                        </div>
+                        <div class="news-description">
+                            <h4>Aktualność numer cztery</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet quibusdam
+                                quidem
+                                aspernatur quam, sint maiores.</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </section>
+
 
         <section>
             <div class="container-section" id="workshop">
