--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <section>
-            <div class="container-section news-section grey-section">
+            <div class="container-section news-section grey-section" id="news">
                 <div class="section-heading">
                     <h3>Aktualności</h3>
                 </div>
@@ -123,25 +123,23 @@
                 <div class="section-heading">
                     <h3>Profil warsztatów</h3>
                 </div>
-                <div>
-                    <div class="workshop-details">
-                        <p class="worshop-details-item">Cel:</p>
-                        <p class="worshop-details-item-description">promocja prawidłowych postaw żywieniowych</p>
-                        <p class="worshop-details-item">Grupa docelowa:</p>
-                        <p class="worshop-details-item-description">dzieci, młodzież, rodzice</p>
-                        <p class="worshop-details-item">Czas trwania projektu:</p>
-                        <p class="worshop-details-item-description">maj 2020 - czerwiec 2020</p>
-                        <p class="worshop-details-item">Zakres:</p>
-                        <p class="worshop-details-item-description">200 warsztatów</p>
-                        <p class="worshop-details-item">Forma:</p>
-                        <p class="worshop-details-item-description">dwugodzinne</p>
-                        <p class="worshop-details-item">Charakter:</p>
-                        <p class="worshop-details-item-description">bezpłatne</p>
-                        <p class="worshop-details-item">Prowadzący:</p>
-                        <p class="worshop-details-item-description">dr Jan Kowalski</p>
-                        <p class="worshop-details-item">Regulamin:</p>
-                        <p><a href="#" class="worshop-details-item">Kliknij Tutaj</a></p>
-                    </div>
+                <div class="workshop-details">
+                    <p class="worshop-details-item">Cel:</p>
+                    <p class="worshop-details-item-description">promocja prawidłowych postaw żywieniowych</p>
+                    <p class="worshop-details-item">Grupa docelowa:</p>
+                    <p class="worshop-details-item-description">dzieci, młodzież, rodzice</p>
+                    <p class="worshop-details-item">Czas trwania projektu:</p>
+                    <p class="worshop-details-item-description">maj 2020 - czerwiec 2020</p>
+                    <p class="worshop-details-item">Zakres:</p>
+                    <p class="worshop-details-item-description">200 warsztatów</p>
+                    <p class="worshop-details-item">Forma:</p>
+                    <p class="worshop-details-item-description">dwugodzinne</p>
+                    <p class="worshop-details-item">Charakter:</p>
+                    <p class="worshop-details-item-description">bezpłatne</p>
+                    <p class="worshop-details-item">Prowadzący:</p>
+                    <p class="worshop-details-item-description">dr Jan Kowalski</p>
+                    <p class="worshop-details-item">Regulamin:</p>
+                    <p><a href="#" class="worshop-details-item">Kliknij Tutaj</a></p>
                 </div>
             </div>
         </section>
