--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3>Profil warsztatów</h3>
                 </div>
                 <div class="workshop-details">
-                    <p class="worshop-details-item">Cel:</p>
+                    <p> class="worshop-details-item">Cel:</p>
                     <p class="worshop-details-item-description">promocja prawidłowych postaw żywieniowych</p>
                     <p class="worshop-details-item">Grupa docelowa:</p>
                     <p class="worshop-details-item-description">dzieci, młodzież, rodzice</p>
