--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3>Profil warsztatów</h3>
                 </div>
                 <div class="workshop-details">
-                    <p> class="worshop-details-item">Cel:</p>
+                    <p class="worshop-details-item">Cel:</p>
                     <p class="worshop-details-item-description">promocja prawidłowych postaw żywieniowych</p>
                     <p class="worshop-details-item">Grupa docelowa:</p>
                     <p class="worshop-details-item-description">dzieci, młodzież, rodzice</p>
@@ -177,33 +177,33 @@
                 </div>
             </div>
 
+
             <section>
-                <div class="recipies">
-                    <div class="container-section" id="recipies">
-                        <div class="section-heading">
-                            <h3>Przepisy</h3>
+                <div class="container-section recipies-section">
+                    <div class="section-heading">
+                        <h3>Przepisy</h3>
+                    </div>
+
+                    <div class="recipies">
+                        <div class="recipe">
+                            <img src="./media/icons/1stMeal.svg" alt="">
+                            <p>śniadania</p>
                         </div>
-                        <div class="recipies">
-                            <div class="recipe">
-                                <img src="./media/icons/1stMeal.svg" alt="">
-                                <p>ŚNIADANIA</p>
-                            </div>
-                            <div class="recipe">
-                                <img src="./media/icons/2ndMeal.svg" alt="">
-                                <p>II ŚNIADANIE</p>
-                            </div>
-                            <div class="recipe">
-                                <img src="./media/icons/3rdMeal.svg" alt="">
-                                <p>OBIAD</p>
-                            </div>
-                            <div class="recipe">
-                                <img src="./media/icons/4thMeal.svg" alt="">
-                                <p>PODWIECZOREK</p>
-                            </div>
-                            <div class="recipe">
-                                <img src="./media/icons/5rdMeal.svg" alt="">
-                                <p>KOLACJA</p>
-                            </div>
+                        <div class="recipe">
+                            <img src="./media/icons/2ndMeal.svg" alt="">
+                            <p>II śniadanie</p>
+                        </div>
+                        <div class="recipe">
+                            <img src="./media/icons/3rdMeal.svg" alt="">
+                            <p>obiad</p>
+                        </div>
+                        <div class="recipe">
+                            <img src="./media/icons/4thMeal.svg" alt="">
+                            <p>podwieczorek</p>
+                        </div>
+                        <div class="recipe">
+                            <img src="./media/icons/5rdMeal.svg" alt="">
+                            <p>kolacja</p>
                         </div>
                     </div>
                 </div>
