--- a/index.html
+++ b/index.html
@@ -215,25 +215,16 @@
                         <h3>Dla rodziców</h3>
                     </div>
 
-                    <div>
-                        <div class="container-parent">
-                            <p><a href="#" class="worshop-details-item">Wpływ żywienia na zdrowie</a></p>
-                            <p><a href="#" class="worshop-details-item">Najistotniejsze składniki w diecie twojego
-                                    dziecka</a></p>
-                            <p><a href="#" class="worshop-details-item">Jak postępować z niejadkiem</a></p>
-                        </div>
-                        <div class="container-parent">
-                            <p><a href="#" class="worshop-details-item">Wpływ żywienia na zdrowie</a></p>
-                            <p><a href="#" class="worshop-details-item">Najistotniejsze składniki w diecie twojego
-                                    dziecka</a></p>
-                            <p><a href="#" class="worshop-details-item">Jak postępować z niejadkiem</a></p>
-                        </div>
-                        <div class="container-parent">
-                            <p><a href="#" class="worshop-details-item">Wpływ żywienia na zdrowie</a></p>
-                            <p><a href="#" class="worshop-details-item">Najistotniejsze składniki w diecie twojego
-                                    dziecka</a></p>
-                            <p><a href="#" class="worshop-details-item">Jak postępować z niejadkiem</a></p>
-                        </div>
+                    <div class="container-parents">
+                        <div href="#" class="parents-item">Wpływ żywienia na zdrowie</div>
+                        <div href="#" class="parents-item">Najistotniejsze składniki w diecie twojego dziecka</div>
+                        <div href="#" class="parents-item">Jak postępować z niejadkiem</div>
+                        <div href="#" class="parents-item">Najistotniejsze składniki w diecie twojego dziecka</div>
+                        <div href="#" class="parents-item">Jak postępować z niejadkiem</div>
+                        <div href="#" class="parents-item">Najistotniejsze składniki w diecie twojego dziecka</div>
+                        <div href="#" class="parents-item">Jak postępować z niejadkiem</div>
+                        <div href="#" class="parents-item">Najistotniejsze składniki w diecie twojego dziecka</div>
+                        <div href="#" class="parents-item">Jak postępować z niejadkiem</div>
                     </div>
                 </div>
             </section>
