--- a/index.html
+++ b/index.html
@@ -235,12 +235,19 @@
                         <h3>Organizatorzy</h3>
                     </div>
                     <div class="container-organizers">
-                        <p>Organizatorzy</p>
-                        <img src="./media/organizers/sponsor1.svg" alt="">
-                        <p>Patroni</p>
-                        <img src="./media/organizers/sponsor2.svg" alt="">
-                        <p>Sponsorzy</p>
-                        <img src="./media/organizers/sponsor3.svg" alt="">
+                        <div class="container-organizers-wrapper">
+                            <h4>Organizatorzy</h4>
+                            <img src="./media/organizers/sponsor1.svg" alt="">
+                        </div>
+
+                        <div class="container-organizers-wrapper">
+                            <h4>Patroni</h4>
+                            <img src="./media/organizers/sponsor2.svg" alt="">
+                        </div>
+                        <div class="container-organizers-wrapper">
+                            <h4>Sponsorzy</h4>
+                            <img src="./media/organizers/sponsor3.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </section>
