--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                         <div class="news-description">
                             <h4>Aktualność numer cztery</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet quibusdam
-                                quidem
-                                aspernatur quam, sint maiores.</p>
+                                quidem.</p>
                         </div>
 
                     </div>
