Centered header and fixed navigation buttons

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
     <header class="header">
         <div class="container-header">
-            <a href="index.html">
-                <img src="./media/images/logo.png" alt="logo" class="header-logo">
-            </a>
             <div class="header-items">
-                <a href='#home' class="header-item">HOME</a>
+                <a href="index.html" class="header-item">
+                    <img src="./media/images/logo.png" alt="logo" class="header-logo" >
+                </a>
+                <a href='#home-navigation' class="header-item">HOME</a>
                 <a class="header-item">&#8226;</a>
-                <a href='#news' class="header-item">AKTUALNOŚCI</a>
+                <a href='#news-navigation' class="header-item">AKTUALNOŚCI</a>
                 <a class="header-item">&#8226;</a>
-                <a href='#gallery' class="header-item">GALERIA</a>
+                <a href='#gallery-navigation' class="header-item">GALERIA</a>
                 <a class="header-item">&#8226;</a>
-                <a href='#recipies' class="header-item">PRZEPISY</a>
+                <a href='#recipies-navigation' class="header-item">PRZEPISY</a>
                 <a class="header-item">&#8226;</a>
-                <a href='#parents' class="header-item">DLA RODZICÓW</a>
+                <a href='#parents-navigation' class="header-item">DLA RODZICÓW</a>
                 <a class="header-item">&#8226;</a>
-                <a href='#organizers' class="header-item">ORGANIZATORZY</a>
+                <a href='#organizers-navigation' class="header-item">ORGANIZATORZY</a>
                 <a class="header-item">&#8226;</a>
-                <a href='#footer' class="header-item">POLECAMY</a>
+                <a href='#footer-navigation' class="header-item">POLECAMY</a>
             </div>
         </div>
     </header>
@@ -62,7 +62,7 @@
         </section>
 
         <section>
-            <div class="container-section news-section grey-section" id="news">
+            <div class="container-section news-section grey-section" id="news-navigation">
                 <div class="section-heading">
                     <h3>Aktualności</h3>
                 </div>
@@ -144,7 +144,7 @@
         </section>
 
         <section>
-            <div class="container-section" id="gallery">
+            <div class="container-section" id="gallery-navigation">
                 <div class="section-heading">
                     <h3>Galeria</h3>
                 </div>
@@ -178,7 +178,7 @@
 
 
             <section>
-                <div class="container-section recipies-section">
+                <div class="container-section recipies-section"id = "recipies-navigation">
                     <div class="section-heading">
                         <h3>Przepisy</h3>
                     </div>
@@ -209,7 +209,7 @@
             </section>
 
             <section>
-                <div class="container-section grey-section" id="parents">
+                <div class="container-section grey-section" id="parents-navigation">
                     <div class="section-heading">
                         <h3>Dla rodziców</h3>
                     </div>
@@ -229,7 +229,7 @@
             </section>
 
             <section>
-                <div class="container-section" id="organizers">
+                <div class="container-section" id="organizers-navigation">
                     <div class="section-heading">
                         <h3>Organizatorzy</h3>
                     </div>
