--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-header">
             <div class="header-items">
                 <a href="index.html" class="header-item">
-                    <img src="./media/images/logo.png" alt="logo" class="header-logo" >
+                    <img src="./media/images/logo.png" alt="logo" class="header-logo">
                 </a>
                 <a href='#home-navigation' class="header-item">HOME</a>
                 <a class="header-item">&#8226;</a>
@@ -59,12 +59,14 @@
                     </p>
                 </div>
             </div>
+    <div id="date"></div>
         </section>
 
         <section>
             <div class="container-section news-section grey-section" id="news-navigation">
                 <div class="section-heading">
-                    <h3>Aktualności</h3>
+                    <h3>Aktualności na dzień: </h3>
+                    <h3 id ="js-date"></h3>
                 </div>
                 <div class="news">
                     <div class="news-item">
@@ -178,7 +180,7 @@
 
 
             <section>
-                <div class="container-section recipies-section"id = "recipies-navigation">
+                <div class="container-section recipies-section" id="recipies-navigation">
                     <div class="section-heading">
                         <h3>Przepisy</h3>
                     </div>
@@ -255,5 +257,5 @@
                 <img src="./media/images/footer.png" alt="">
             </div>
     </div>
-
+    <script src="scripts.js"></script>
 </body>
