--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
         <section>
             <div class="container-section" id="kids-pic">
-                <img src="./media/images/kids.jpg" alt="">
+                <img class="kids-pic-js" src="./media/images/kids.jpg" alt="">
+                <img class="kids-pic-js" src="./media/images/kids2.jpg" alt="">
+                <img class="kids-pic-js" src="./media/images/kids3.jpg" alt="">
             </div>
         </section>
 
