JS3-text animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="container-header">
-            <div class="header-items">
+            <div class="header-items" id="header-items">
                 <a href="index.html" class="header-item">
                     <img src="./media/images/logo.png" alt="logo" class="header-logo">
                 </a>
@@ -28,9 +28,11 @@
                 <a class="header-item">&#8226;</a>
                 <a href='#footer-navigation' class="header-item">POLECAMY</a>
             </div>
+            
         </div>
     </header>
 
+   
 
     <div class="container-all">
 
@@ -41,7 +43,6 @@
                 <img class="kids-pic-js" src="./media/images/kids3.jpg" alt="">
             </div>
         </section>
-
         <section>
             <div class="container-section" id="background">
                 <div class="section-heading">
@@ -234,8 +235,8 @@
 
             <section>
                 <div class="container-section" id="organizers-navigation">
-                    <div class="section-heading">
-                        <h3>Organizatorzy</h3>
+                    <div class="section-heading"  >
+                        <h3 id="js-animation">Organizatorzy</h3>
                     </div>
                     <div class="container-organizers">
                         <div class="container-organizers-wrapper">
